--- a/main.css
+++ b/main.css
@@ -1,5 +1,16 @@
-body{
-    width:80%;
-    margin-left:auto;
-    margin-right:auto;
+html,
+body {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
 }
